# scion-android-binary

./: .gitignore  README.txt  Vagrantfile  build.sh  provision.sh  tls_segment_alignment_patch.py
scion-android/: BUILD.bazel  appnet.go  hostfile.go  hosts.go  initialization.go  main.go  path_selection.go  resolver.go  sensorfetcher.go  sensorserver.go
test/: disp.toml  sd.toml  test.sh  test_godispatcher.sh  test_sciond.sh
test/config/: disp.toml  sd.toml  topology.json
test/config/certs/: ISD19-ASffaa_1_cf4-V1.crt  ISD19-V2.trc
