load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["main.go", "sensorfetcher.go", "sensorserver.go", "initialization.go", "hosts.go", "path_selection.go"],
    importpath = "github.com/scionproto/scion/go/scion-android",
    visibility = ["//visibility:private"],
    deps = [
        "//go/beacon_srv:go_default_library",
        "//go/border:go_default_library",
        "//go/cert_srv:go_default_library",
        "//go/godispatcher:go_default_library",
        "//go/tools/logdog:go_default_library",
        "//go/path_srv:go_default_library",
        "//go/tools/scion-custpk-load:go_default_library",
        "//go/sciond:go_default_library",
        "//go/tools/scion-pki:go_default_library",
        "//go/tools/scmp:go_default_library",
        "//go/tools/showpaths:go_default_library",
        "//go/sig:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/sciond:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "//go/lib/spath/spathmeta:go_default_library",
    ],
)

scion_go_binary(
    name = "scion-android",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    linkmode = "pie",
)
