load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "resolver.go",
    ],
    importpath = "github.com/scionproto/scion/go/scion-android",
    visibility = ["//visibility:private"],
    deps = [
        "//go/cs:go_default_library",
        "//go/daemon:go_default_library",
        "//go/dispatcher:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/daemon:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/addrutil:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "//go/posix-gateway:go_default_library",
        "//go/posix-router:go_default_library",
        "//go/scion:go_default_library",
        "//go/scion-pki:go_default_library",
    ],
)

scion_go_binary(
    name = "scion-android",
    embed = [":go_default_library"],
    linkmode = "pie",
    visibility = ["//visibility:public"],
)
